--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "phaser": "^3.22.0"
+    "phaser": "^3.22.0",
+    "@mikewesthad/dungeon": "^2.0.1"
   }
 }
